recursion.cons.lessons.recursion.cons.Min.scala.error
min:2: error: not found: type list
	def lambda(l:list[Int],n:Int): Int = {
                     ^